inicio navbar collapse removed, mobile position of body fixed

--- a/css/home.css
+++ b/css/home.css
@@ -25,7 +25,9 @@
     .navbar {
         background-color: #44296b;
     }
-
+    .cuerpo{
+        margin-top: 71px;
+    }
     .navbar-collapse,
     .navbar-collapse.collapse,
     .navbar-collapse.in,
